# ggy_easy_reports

./: .dockerignore  .gitignore  Dockerfile  LICENCE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  run.sh  tox.ini
.github/workflows/: publish.yml  test.yml
examples/: app.py  settings.py
examples/defs/R001/: report.py
examples/defs/R001/sql/: test_mssql.sql  test_mysql.sql
examples/defs/R002/: report.py
examples/defs/R002/sql/: countries_postgres.sql
scripts/: country_data.py
scripts/manual_setup/: setup_mssql.sql  setup_mysql.sql  setup_postgres.sql
scripts/mssql/: Dockerfile  configure-db.sh  entrypoint.sh
src/easy_reports/: __init__.py  base.py  cli.py  config.py  data.py  defaults.py  email.py  email_smtplib.py  excel.py
src/easy_reports/boilerplate/: report.py
tests/: sample_data.py  settings_test_base.py  settings_test_excel.py  settings_test_report.py  test_base.py  test_config.py  test_data.py  test_excel.py
